--- a/styles.css
+++ b/styles.css
@@ -69,9 +69,9 @@ h2, .page-title {
   padding: 10px 20px;
 }
 
-.logo { 
- height: 35px; 
-  margin-left: 10px
+
+.logo img { 
+   margin-right: 10px
 }
 
 /* Search Bar Top */
@@ -99,8 +99,8 @@ h2, .page-title {
   cursor: pointer; 
 }
 .right-logos img { 
-  height: 35px; 
-  margin-left: 10px; 
+  height: 70px; 
+  margin-left: 20px; 
 }
 
 /* Navigasi Utama (Latarnya harus biru gelap solid) */
