--- a/styles.css
+++ b/styles.css
@@ -110,9 +110,9 @@ h2, .page-title {
   justify-content: space-between;
   align-items: stretch;
   background-color: var(--color-primary); /* Biru gelap solid */
-  padding: 10px 20px;
+  padding: 0 20px;
   max-width: 1500px;
-  margin: 0 auto;
+  margin: 10px auto;
 }
 
 .nav-item {
