--- a/styles.css
+++ b/styles.css
@@ -211,13 +211,18 @@ h2, .page-title {
   color: white; 
   border-radius: 8px;
 }
-.hero-content h2 { 
-  color: var(--color-text-light);
-  background-color: rgba(0, 0, 0, 0.4);
-  padding: 15px 30px;
-  border-radius: 5px;
-  font-size: 2.5em;
-  font-weight: 900;
+
+.slider {
+  width: 100%;
+  height: 800px;
+  overflow: hidden;
+  position: relative;
+}
+
+.slide {
+  display: none;
+  width: 100%;
+  animation: slide 1.5s;
 }
 
 /* Card Grid */
