--- a/styles.css
+++ b/styles.css
@@ -214,9 +214,14 @@ h2, .page-title {
 
 .slider {
   width: 100%;
-  height: 800px;
   overflow: hidden;
   position: relative;
+}
+
+.slides {
+  display: flex;
+  width: 200%;
+  animation: slide 1.5s;
 }
 
 .slide {
