--- a/styles.css
+++ b/styles.css
@@ -231,11 +231,11 @@ h2, .page-title {
 }
 
 @keyframes slide {
-    0%   { margin-left: 0%; }
-    45%  { margin-left: 0%; }
-    50%  { margin-left: -100%; }
-    95%  { margin-left: -100%; }
-    100% { margin-left: 0%; }
+    0%   { margin-left: 0%; transform: translateX(0);}
+    45%  { margin-left: 0%; transform: translateX(0);}
+    50%  { margin-left: -100%; transform: translateX(-100%);}
+    95%  { margin-left: -100%; transform: translateX(-100%); }
+    100% { margin-left: 0%; transform: translateX(0);}
 }
 
 /* Card Grid */
