--- a/styles.css
+++ b/styles.css
@@ -211,6 +211,7 @@ h2, .page-title {
 
 .slider {
   width: 100%;
+  height: 400px;
   overflow: hidden;
   position: relative;
 }
@@ -222,9 +223,9 @@ h2, .page-title {
 }
 
 .slide {
-  display: flex;
   width: 100%;
-  animation: slide 10s infinite;
+  height: 100%;
+  object-fit: cover;
 }
 
 @keyframes slide {
