--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,8 @@ h2, .page-title {
 
 .hero-banner { 
   min-height: 350px; 
-  display: flex; 
+  display: block; 
+  width: 100%;
   justify-content: center; 
   align-items: center; 
   text-align: center; 
