--- a/styles.css
+++ b/styles.css
@@ -216,14 +216,13 @@ h2, .page-title {
   display: flex;
   width: 100%;
   animation: slide 10s infinite;
-  gap: 200px;
 }
 
 .slide {
-  width: 100%;
+  flex-shrink: 0;
+  flex-basis: 100%;
   height: 100%;
   object-fit: cover;
-  gap: 200px;
 }
 
 @keyframes slide {
