--- a/styles.css
+++ b/styles.css
@@ -222,7 +222,7 @@ h2, .page-title {
 .slide {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 @keyframes slide {
