--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ h2, .page-title {
 
 .slides {
   display: flex;
-  width: 500%;
+  width: 0;
   animation: slide 10s infinite;
   gap: 200px;
 }
