--- a/styles.css
+++ b/styles.css
@@ -205,24 +205,23 @@ h2, .page-title {
 
 }
 
-.slider {
-  width: 100%;
-  height: 400px;
-  overflow: hidden;
-  position: relative;
+.slideshow {
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    position: relative;
 }
 
 .slides {
   display: flex;
-  width: 100%;
-  animation: slide 10s infinite;
+  width: 500%;
+  transition: transform 1s ease;
   gap: 200px;
 }
 
-.slide {
-  height: 100%;
+.slide img {
   width: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 @keyframes slide {
