--- a/styles.css
+++ b/styles.css
@@ -207,30 +207,26 @@ h2, .page-title {
 
 .slideshow {
     width: 100%;
-    height: 100px;
+    max-width: 1200px;
+    height: 350px;
+    margin: auto;
     overflow: hidden;
     position: relative;
 }
 
 .slides {
   display: flex;
-  width: 100%;
+  width: 500%;
   transition: transform 1s ease;
   gap: 200px;
 }
 
 .slide img {
   width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
-@keyframes slide {
-    0%   { margin-left: 0%; transform: translateX(0);}
-    45%  { margin-left: 0%; transform: translateX(0);}
-    50%  { margin-left: -100%; transform: translateX(-100%);}
-    95%  { margin-left: -100%; transform: translateX(-100%); }
-    100% { margin-left: 0%; transform: translateX(0);}
-}
 
 /* Card Grid */
 .card-grid { 
