--- a/styles.css
+++ b/styles.css
@@ -205,40 +205,33 @@ h2, .page-title {
 
 }
 
-.slideshow {
-    width: 100%;
-    max-width: 1200px;
-    height: 350px;
-    margin: auto;
-    overflow: hidden;
-    position: relative;
+.slider {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  position: relative;
 }
 
 .slides {
   display: flex;
-  width: 500%;
-  transition: transform 1s ease;
+  width: 100%;
+  animation: slide 10s infinite;
   gap: 200px;
 }
 
-.slide img {
-  width: 100%;
+.slide {
   height: 100%;
+  width: 100%;
   object-fit: contain;
 }
 
-@media (max-width: 768px) {
-    .slideshow {
-        height: 250px;
-    }
+@keyframes slide {
+    0%   { margin-left: 0%; transform: translateX(0);}
+    45%  { margin-left: 0%; transform: translateX(0);}
+    50%  { margin-left: -100%; transform: translateX(-100%);}
+    95%  { margin-left: -100%; transform: translateX(-100%); }
+    100% { margin-left: 0%; transform: translateX(0);}
 }
-
-@media (max-width: 480px) {
-    .slideshow {
-        height: 180px;
-    }
-}
-
 
 /* Card Grid */
 .card-grid { 
