--- a/styles.css
+++ b/styles.css
@@ -227,21 +227,12 @@ h2, .page-title {
 }
 
 @keyframes slide {
-  0% { transform: translateX(0); }
-  20% { transform: translateX(0); }
-
-  25% { transform: translateX(-100%); }
-  45% { transform: translateX(-100%); }
-
-  50% { transform: translateX(-200%); }
-  70% { transform: translateX(-200%); }
-
-  75% { transform: translateX(-300%); }
-  95% { transform: translateX(-300%); }
-
-  100% { transform: translateX(-400%); }
+    0%   { margin-left: 0%; transform: translateX(0);}
+    45%  { margin-left: 0%; transform: translateX(0);}
+    50%  { margin-left: -100%; transform: translateX(-100%);}
+    95%  { margin-left: -100%; transform: translateX(-100%); }
+    100% { margin-left: 0%; transform: translateX(0);}
 }
-
 
 /* Card Grid */
 .card-grid { 
