--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,7 @@ h2, .page-title {
 .slides {
   display: flex;
   width: 100%;
-  transition: transform 1.5s ease;
+  animation: slide 10s infinite;
   gap: 200px;
 }
 
@@ -223,7 +223,6 @@ h2, .page-title {
   height: 100%;
   width: 100%;
   object-fit: contain;
-  flex-shrink: 0;
 }
 
 @keyframes slide {
