--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,7 @@ h2, .page-title {
 }
 
 .slider {
-  max width: 1500px;
+  max width: 100%;
   height: 400px;
   overflow: hidden;
   position: relative;
@@ -214,23 +214,31 @@ h2, .page-title {
 
 .slides {
   display: flex;
-  width: 100%;
+  width: 500%;
   animation: slide 10s infinite;
-  gap: 200px;
 }
 
 .slide {
   height: 100%;
   width: 100%;
   object-fit: contain;
+  flex-shrink: 0;
 }
 
 @keyframes slide {
-    0%   { margin-left: 0%; transform: translateX(0);}
-    45%  { margin-left: 0%; transform: translateX(0);}
-    50%  { margin-left: -100%; transform: translateX(-100%);}
-    95%  { margin-left: -100%; transform: translateX(-100%); }
-    100% { margin-left: 0%; transform: translateX(0);}
+  0% { transform: translateX(0); }
+  20% { transform: translateX(0); }
+
+  25% { transform: translateX(-100%); }
+  45% { transform: translateX(-100%); }
+
+  50% { transform: translateX(-200%); }
+  70% { transform: translateX(-200%); }
+
+  75% { transform: translateX(-300%); }
+  95% { transform: translateX(-300%); }
+
+  100% { transform: translateX(-400%); }
 }
 
 /* Card Grid */
