--- a/styles.css
+++ b/styles.css
@@ -206,16 +206,18 @@ h2, .page-title {
 }
 
 .slider {
-  width: 100%;
+  width: 150%;
   height: 400px;
   overflow: hidden;
   position: relative;
+  
 }
 
 .slides {
   display: flex;
   width: 100%;
   animation: slide 10s infinite;
+  object-position: left;
 }
 
 .slide {
@@ -223,6 +225,13 @@ h2, .page-title {
   width: 100%;
   object-fit: contain;
   flex-shrink: 0;
+}
+
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: left;
 }
 
 @keyframes slide {
