--- a/styles.css
+++ b/styles.css
@@ -207,7 +207,8 @@ h2, .page-title {
 
 .slider {
   width: 150%;
-  height: 400px;
+  height: 300px;
+  margin: 0;
   overflow: hidden;
   position: relative;
   
@@ -231,7 +232,7 @@ h2, .page-title {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: left;
+  object-position: right;
 }
 
 @keyframes slide {
