--- a/styles.css
+++ b/styles.css
@@ -206,33 +206,37 @@ h2, .page-title {
 }
 
 .slider {
-  width: 150%;
-  height: 300px;
+  width: 100%;
+  height: 500px;
   margin: 0;
   overflow: hidden;
-  position: relative;
+  position: center;
   
 }
 
 .slides {
   display: flex;
-  width: 100%;
+  width: 50%;
   animation: slide 10s infinite;
   object-position: left;
+  gap: 200px;
 }
 
 .slide {
-  height: 100%;
-  width: 100%;
+  height: 200px;
+  width: 0;
   object-fit: contain;
   flex-shrink: 0;
+  position: center
+  ;
 }
 
 .slide img {
-  width: 100%;
-  height: 100%;
+  width: 200%;
+  height: 200%;
   object-fit: cover;
   object-position: right;
+
 }
 
 @keyframes slide {
