--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ h2, .page-title {
 .hero-banner { 
   overflow: hidden; 
   width: 100%;
-  height: 500px;
+  height: 800px;
 
 }
 
@@ -225,9 +225,9 @@ h2, .page-title {
 .slide img {
   width: 100%;
   height: auto;
-  object-fit: contain;
+  object-fit: cover;
   object-position: top center;
-  opacity: 100%;
+  opacity: 50%;
 }
 
 @keyframes slide {
