--- a/styles.css
+++ b/styles.css
@@ -300,6 +300,100 @@ h2, .page-title {
   }
 }
 
+/* lokasi intervensi*/
+
+.map-section {
+  padding: 60px 80px;
+  background: white;
+}
+
+.map-section h2 {
+  text-align: center;
+  font-size: 36px;
+  margin-bottom: 40px;
+}
+
+.map-wrapper {
+  position: relative;
+}
+
+.map-content {
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+  align-items: center;
+  gap: 40px;
+}
+
+.map-info {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.info-box {
+  border: 3px solid #1f2f6d;
+  width: 260px;
+}
+
+.info-box h3 {
+  background: #1f2f6d;
+  color: white;
+  padding: 10px;
+}
+
+.info-box ul {
+  background: #44d28d;
+  padding: 15px;
+}
+
+.legend div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: bold;
+}
+
+.legend span {
+  width: 30px;
+  height: 20px;
+  display: inline-block;
+}
+
+.green { background: #44d28d; }
+.red { background: #d62828; }
+
+/* SLIDER */
+.map-slider {
+  overflow: hidden;
+  width: 100%;
+}
+
+.map-track {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+
+.map-track img {
+  width: 100%;
+  flex-shrink: 0;
+}
+
+/* PANAH */
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: black;
+  color: white;
+  border: none;
+  font-size: 30px;
+  padding: 10px 15px;
+  cursor: pointer;
+}
+
+.arrow.left { left: -50px; }
+.arrow.right { right: -50px; }
+
 
 
 
