--- a/styles.css
+++ b/styles.css
@@ -315,6 +315,8 @@ h2, .page-title {
 
 .map-wrapper {
   position: relative;
+  max-width: 1200px;
+  margin: auto;
 }
 
 .map-content {
@@ -366,15 +368,18 @@ h2, .page-title {
 .map-slider {
   overflow: hidden;
   width: 100%;
+  position: relative;
 }
 
 .map-track {
   display: flex;
-  transition: transform 0.5s ease;
+  transition: transform 0.5s ease-in-out;
+  width: 300%;
 }
 
 .map-track img {
   width: 100%;
+  height: auto;
   flex-shrink: 0;
 }
 
@@ -386,13 +391,17 @@ h2, .page-title {
   background: black;
   color: white;
   border: none;
-  font-size: 30px;
+  font-size: 22px;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
   padding: 10px 15px;
   cursor: pointer;
+  z-index: 10;
 }
 
-.arrow.left { left: -50px; }
-.arrow.right { right: -50px; }
+.arrow.left { left: -25px; }
+.arrow.right { right: -25px; }
 
 
 
@@ -1177,6 +1186,37 @@ html {
   font-weight: bold;
   font-style: underline;
 }
+
+/* tombol struktur */
+.struktur-btn {
+  text-align: center;
+  margin: 30px 0;
+}
+
+.struktur-btn button {
+  padding: 10px 22px;
+  margin: 0 6px;
+  border: none;
+  border-radius: 8px;
+  background: #ddd;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.struktur-btn button.active {
+  background: #0b2c5d;
+  color: #fff;
+}
+
+/* hide & show struktur */
+.struktur {
+  display: none;
+}
+
+.struktur.active {
+  display: block;
+}
+
 
 .jabatan {
   margin-top: 2px;
