--- a/Backend/public/css/style.css
+++ b/Backend/public/css/style.css
@@ -224,13 +224,13 @@ h2, .page-title {
 
 .hero-banner { 
   overflow: hidden; 
-  width: 100%;
-  height: 800px;
+  width: 80%;
+  height: 600px;
 
 }
 
 .slider {
-  width: 100%;
+  width: 80%;
   overflow: hidden;
   
 }
@@ -242,7 +242,7 @@ h2, .page-title {
 }
 
 .slide {
-  width: 100%;
+  width: 80%;
   display: flex;
   object-fit: contain;
   flex-shrink: 0;
@@ -251,7 +251,7 @@ h2, .page-title {
 }
 
 .slide img {
-  width: 100%;
+  width: 80%;
   height: auto;
   object-fit: cover;
   object-position: top center;
@@ -430,8 +430,8 @@ h2, .page-title {
   background: rgba(0, 0, 0, 0.8);
 }
 
-.arrow.left { left: 10px; }
-.arrow.right { right: 10px; }
+.arrow.left { left: 100px; color: #000000; }
+.arrow.right { right: -100px; color: #000000; }
 
 
 
